--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 <body>
     <main>
         <header>
-            <h1>Título do site </h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curos de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora atque facilis quos ex voluptate sed incidunt sequi culpa voluptas! Velit doloremque fugiat minus quibusdam. Facere, reiciendis necessitatibus? Quam, earum doloribus!</p>
         </article>
 
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, iusto vel velit magnam recusandae et. Molestias animi nisi eius eaque saepe quisquam rem necessitatibus porro. Repellat numquam magni nihil itaque?</p>
         </article>
     </main>
 </body>
